--- a/package.json
+++ b/package.json
@@ -13,6 +13,27 @@
   },
   "homepage": "https://github.com/davidsneighbour/hugonewsletter.com",
   "dependencies": {
-    "mjml": "^4.5.0"
+    "mjml": "^4.5.0",
+    "atomic-algolia": "^0.3.17",
+    "autoprefixer": "^9.6.1",
+    "bootstrap": "^4.3.1",
+    "cookieconsent": "^3.1.1",
+    "cz-conventional-changelog": "^2.1.0",
+    "cz-customizable": "^6.2.0",
+    "imagemin-cli": "^4.0.1",
+    "imagemin-mozjpeg": "^8.0.0",
+    "imagemin-pngquant": "^8.0.0",
+    "instantsearch.js": "^3.5.4",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
+    "popper.js": "^1.15.0",
+    "postcss-cli": "^6.1.3"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 version"
+  ],
+  "devDependencies": {
+    "cssnano": "^4.1.10"
   }
 }
