--- a/package.json
+++ b/package.json
@@ -33,8 +33,28 @@
     "> 1%",
     "last 2 version"
   ],
+  "standard-version": {
+    "skip": {
+      "changelog": true
+    },
+    "bumpFiles": [
+      {
+        "filename": "package.json",
+        "type": "json"
+      }
+    ]
+  },
   "devDependencies": {
     "cssnano": "4.1.10",
-    "minimist": "1.2.2"
-  }
+    "minimist": "1.2.5",
+    "standard-version": "8.0.2"
+  },
+  "scripts": {
+    "start": "webpack --mode=development --watch",
+    "build": "webpack --mode=production",
+    "nightwatch": "nightwatch -c tests/nightwatch.conf.js",
+    "release": "standard-version --release-as patch -a -t \"\" && git push --follow-tags origin master",
+    "release-next": "standard-version --release-as minor -a -t \"\" && git push --follow-tags origin master",
+    "release-major": "standard-version --release-as major -a -t \"\" && git push --follow-tags origin master"
+  },
 }
