--- a/package.json
+++ b/package.json
@@ -76,6 +76,14 @@
     "husky": "4.3.0",
     "postcss-cli": "8.3.0",
     "postcss-preset-env": "^6.7.0",
-    "standard-version": "9.0.0"
+    "standard-version": "9.0.0",
+    "stylelint": "13.8.0",
+    "stylelint-config-dnb": "git://github.com/davidsneighbour/stylelint-config-dnb.git"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-dnb",
+    "ignoreFiles": [
+      "assets/scss/templates/*"
+    ]
   }
 }
