--- a/package.json
+++ b/package.json
@@ -82,7 +82,7 @@
     "cz-customizable": "6.3.0",
     "husky": "4.3.0",
     "postcss-cli": "8.3.0",
-    "postcss-preset-env": "^6.7.0",
+    "postcss-preset-env": "6.7.0",
     "standard-version": "9.0.0",
     "stylelint": "13.8.0",
     "stylelint-config-dnb": "git://github.com/davidsneighbour/stylelint-config-dnb.git"
