--- a/package.json
+++ b/package.json
@@ -1,97 +1,56 @@
 {
   "name": "hugonewsletter.com",
-  "version": "3.0.3",
   "description": "Repository for the (unofficial) Hugo Newsletter.",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/davidsneighbour/hugonewsletter.com.git"
-  },
+  "version": "3.0.3",
   "author": "Patrick Kollitsch <patrick@hugonewsletter.com>",
-  "license": "MIT",
   "bugs": {
-    "url": "https://github.com/davidsneighbour/hugonewsletter.com/issues"
-  },
-  "homepage": "https://github.com/davidsneighbour/hugonewsletter.com",
-  "browserslist": [
-    ">= 1%",
-    "last 2 major version",
-    "not dead"
-  ],
-  "standard-version": {
-    "skip": {
-      "changelog": true
-    },
-    "bumpFiles": [
-      {
-        "filename": "package.json",
-        "type": "json"
-      }
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+    "url": "https://github.com/dnb-hugo/hugonewsletter.com/issues"
   },
   "commitlint": {
     "extends": [
-      "@commitlint/config-conventional"
-    ],
-    "rules": {
-      "body-max-line-length": [
-        0,
-        "always",
-        100
-      ],
-      "type-enum": [
-        0,
-        "always",
-        [
-          "feat",
-          "fix",
-          "layouts",
-          "refactor",
-          "test",
-          "chore",
-          "wip",
-          "content"
-        ]
-      ]
-    }
-  },
-  "scripts": {
-    "release": "standard-version --release-as patch -a -t \"\" && git push --follow-tags origin main",
-    "release-next": "standard-version --release-as minor -a -t \"\" && git push --follow-tags origin main",
-    "release-major": "standard-version --release-as major -a -t \"\" && git push --follow-tags origin main",
-    "serve": "hugo server --minify --disableFastRender --i18n-warnings --navigateToChanged  --templateMetrics --templateMetricsHints --verbose --verboseLog --path-warnings --buildDrafts --buildExpired --buildFuture --watch --enableGitInfo --forceSyncStatic --log true --logFile hugo.log --verbose",
-    "commitlint": "commitlint --from=HEAD~1",
-    "hugo-update": "hugo mod get -u ./... && hugo mod tidy",
-    "textlint": "textlint",
-    "textlint-fix": "textlint --fix",
-    "lint-md": "remark .",
-    "stylelint": "stylelint assets/scss/",
-    "stylelint2": "stylelint",
-    "stylelint-fix": "stylelint assets/scss/ --fix"
+      "@dnb-hugo/commitlint-config"
+    ]
   },
   "devDependencies": {
-    "@commitlint/cli": "11.0.0",
-    "@commitlint/config-conventional": "11.0.0",
-    "autoprefixer": "10.2.3",
+    "@dnb-hugo/browserslist-config": "github:dnb-hugo/browserslist-config",
+    "@dnb-hugo/commitlint-config": "github:dnb-hugo/commitlint-config",
+    "@dnb-hugo/eslint-config": "github:dnb-hugo/eslint-config",
+    "@dnb-hugo/remark-preset-lint": "github:dnb-hugo/remark-preset-lint",
+    "@dnb-hugo/standard-version-config": "github:dnb-hugo/standard-version-config",
+    "@dnb-hugo/stylelint-config": "github:dnb-hugo/stylelint-config",
+    "@dnb-hugo/textlint-config": "github:dnb-hugo/textlint-config",
+    "autoprefixer": "10.2.4",
     "cssnano": "4.1.10",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.3.0",
-    "husky": "4.3.8",
     "postcss-cli": "8.3.1",
     "postcss-preset-env": "6.7.0",
-    "standard-version": "9.1.0",
-    "stylelint": "13.9.0",
-    "stylelint-config-dnb": "git://github.com/davidsneighbour/stylelint-config-dnb.git"
+    "standard-version": "9.1.1",
+    "stylelint": "13.11.0"
+  },
+  "homepage": "https://github.com/dnb-hugo/hugonewsletter.com",
+  "license": "MIT",
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/dnb-hugo/hugonewsletter.com.git"
+  },
+  "scripts": {
+    "lint-md": "remark .",
+    "release": "standard-version --release-as patch -a -t \"\" && ./bin/release-hook-postrelease.sh",
+    "release-major": "standard-version --release-as major -a -t \"\" && ./bin/release-hook-postrelease.sh",
+    "release-next": "standard-version --release-as minor -a -t \"\" && ./bin/release-hook-postrelease.sh",
+    "serve": "hugo server --minify --disableFastRender --i18n-warnings --navigateToChanged  --templateMetrics --templateMetricsHints --verbose --verboseLog --path-warnings --buildDrafts --buildExpired --buildFuture --watch --enableGitInfo --forceSyncStatic --log true --logFile hugo.log --verbose",
+    "stylelint": "stylelint assets/scss/",
+    "stylelint-fix": "stylelint assets/scss/ --fix",
+    "stylelint2": "stylelint",
+    "textlint": "textlint",
+    "textlint-fix": "textlint --fix"
   },
   "stylelint": {
     "extends": "stylelint-config-dnb",
     "ignoreFiles": [
       "assets/scss/templates/*"
     ]
-  },
-  "private": true
+  }
 }
