--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "cz-customizable": "6.3.0",
     "postcss-cli": "8.3.1",
     "postcss-preset-env": "6.7.0",
+    "remark-cli": "9.0.0",
     "standard-version": "9.1.1",
     "stylelint": "13.11.0"
   },
@@ -36,7 +37,7 @@
     "url": "git+https://github.com/dnb-hugo/hugonewsletter.com.git"
   },
   "scripts": {
-    "lint-md": "remark .",
+    "remark": "remark",
     "release": "standard-version --release-as patch -a -t \"\" && ./bin/release-hook-postrelease.sh",
     "release-major": "standard-version --release-as major -a -t \"\" && ./bin/release-hook-postrelease.sh",
     "release-next": "standard-version --release-as minor -a -t \"\" && ./bin/release-hook-postrelease.sh",
