--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,18 @@
 [build]
-publish = "public/"
-command = "hugo --gc --minify"
+publish = "public"
+command = "./bin/netlify.sh"
 
 [build.environment]
-PHP_VERSION="7.2"
 TZ = "Asia/Bangkok"
-HUGO_VERSION = "0.79.0"
+PHP_VERSION="7.2"
+HUGO_VERSION = "0.81.0"
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
+NODE_VERSION = "14.14.0"
+NPM_VERSION = "6.14.8"
+GO_VERSION = "1.15"
+
+[[plugins]]
+package = "netlify-plugin-hugo-cache-resources"
+[plugins.inputs]
+debug = true
