--- a/package.json
+++ b/package.json
@@ -12,22 +12,23 @@
     ]
   },
   "devDependencies": {
-    "@dnb-hugo/browserslist-config": "github:dnb-hugo/browserslist-config",
-    "@dnb-hugo/commitlint-config": "github:dnb-hugo/commitlint-config",
-    "@dnb-hugo/eslint-config": "github:dnb-hugo/eslint-config",
-    "@dnb-hugo/remark-preset-lint": "github:dnb-hugo/remark-preset-lint",
-    "@dnb-hugo/standard-version-config": "github:dnb-hugo/standard-version-config",
-    "@dnb-hugo/stylelint-config": "github:dnb-hugo/stylelint-config",
-    "@dnb-hugo/textlint-config": "github:dnb-hugo/textlint-config",
-    "autoprefixer": "10.2.4",
+    "@dnb-hugo/browserslist-config": "2.0.2",
+    "@dnb-hugo/commitlint-config": "2.0.8",
+    "@dnb-hugo/eslint-config": "2.0.4",
+    "@dnb-hugo/remark-config": "2.0.2",
+    "@dnb-hugo/standard-version-config": "2.0.1",
+    "@dnb-hugo/stylelint-config": "2.0.13",
+    "@dnb-hugo/textlint-config": "2.0.1",
+    "autoprefixer": "10.2.5",
     "cssnano": "4.1.10",
     "cz-conventional-changelog": "3.3.0",
     "cz-customizable": "6.3.0",
+    "postcss": "8.2.7",
     "postcss-cli": "8.3.1",
     "postcss-preset-env": "6.7.0",
     "remark-cli": "9.0.0",
     "standard-version": "9.1.1",
-    "stylelint": "13.11.0"
+    "stylelint": "13.12.0"
   },
   "homepage": "https://github.com/dnb-hugo/hugonewsletter.com",
   "license": "MIT",
@@ -49,11 +50,5 @@
     "stylelint2": "stylelint",
     "textlint": "textlint",
     "textlint-fix": "textlint --fix"
-  },
-  "stylelint": {
-    "extends": "stylelint-config-dnb",
-    "ignoreFiles": [
-      "assets/scss/templates/*"
-    ]
   }
 }
